feat: マークアップ

--- a/training_01/public/index.html
+++ b/training_01/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./assets/style/base.css">
   <link rel="stylesheet" href="style.css">
 
   <script src="main.js" defer></script>
@@ -12,16 +13,16 @@
 <body>
   <header class="header">
     <div class="content-wrapper header-nav">
-        <h1>XX株式会社</h1>
-        <nav>
-            <ul>
-                <li><a href="#">トップページ</a></li>
-                <li><a href="#">会社概要</a></li>
-                <li><a href="#">事業内容</a></li>
-                <li><a href="#">採用情報</a></li>
-                <li><a href="#">お問い合わせ</a></li>
-            </ul>
-        </nav>
+      <h1>XX株式会社</h1>
+      <nav>
+        <ul>
+          <li><a href="./">トップページ</a></li>
+          <li><a href="./company/">会社概要</a></li>
+          <li><a href="./work/">事業内容</a></li>
+          <li><a href="./recruit/">採用情報</a></li>
+          <li><a href="./contact/">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
   <section class="mainvisual">
@@ -74,25 +75,25 @@
   </main>
   <footer class="footer">
     <div class="content-wrapper">
-    <div class="address">
-      <h2>XX株式会社</h2>
-      <p>〒000−0000 <br>
-        東京都×××××××××× <br>
-        TEL 01-2345-6789 <br>
-        FAX 01-2345-6789
-      </p>
-    </div>
-    <ul>
-        <li><a href="#">トップページ</a></li>
-        <li><a href="#">会社概要</a></li>
-        <li><a href="#">事業内容</a></li>
-        <li><a href="#">採用情報</a></li>
-        <li><a href="#">お問い合わせ</a></li>
-    </ul>
+      <div class="address">
+        <h2>XX株式会社</h2>
+        <p>〒000−0000 <br>
+          東京都×××××××××× <br>
+          TEL 01-2345-6789 <br>
+          FAX 01-2345-6789
+        </p>
+      </div>
+      <ul>
+        <li><a href="./">トップページ</a></li>
+        <li><a href="./company/">会社概要</a></li>
+        <li><a href="./work/">事業内容</a></li>
+        <li><a href="./recruit/">採用情報</a></li>
+        <li><a href="./contact/">お問い合わせ</a></li>
+      </ul>
     </div>
     <div class="copyright">
-    <p>©️ XXCo., Ltd. All Rights Reserved.</p>
-  </div>
+      <p>©️ XXCo., Ltd. All Rights Reserved.</p>
+    </div>
   </footer>
 </body>
 
